metadata-sfdx/force-app/main/default/objects/wisespt__WiseSettings__c/wisespt__WiseSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>WiseSettings</label>
</CustomObject>