metadata-sfdx/force-app/main/default/objects/wisespt__WiseSettings__c/fields/wisespt__WiseAPIURL__c.field-meta.xml
<CustomField>
    <fullName>wisespt__WiseAPIURL__c</fullName>
    <defaultValue>"https://support-api.wise.io/api/"</defaultValue>
    <label>WiseAPIURL</label>
    <type>Url</type>
</CustomField>