metadata-sfdx/force-app/main/default/objects/wisespt__WiseSettings__c/fields/wisespt__WiseAuthToken__c.field-meta.xml
<CustomField>
    <fullName>wisespt__WiseAuthToken__c</fullName>
    <description>Authentication Token to the Wise.io App (ask your Wise Contact for this).</description>
    <externalId>true</externalId>
    <label>WiseAuthToken</label>
    <length>128</length>
    <type>Text</type>
</CustomField>