metadata-sfdx/force-app/main/default/objects/wisespt__WiseSettings__c/fields/wisespt__WiseID__c.field-meta.xml
<CustomField>
    <fullName>wisespt__WiseID__c</fullName>
    <externalId>true</externalId>
    <label>WiseID</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>