metadata-sfdx/force-app/main/default/objects/wisespt__WiseSettings__c/fields/wisespt__WisePredictEmailTemplatesOnly__c.field-meta.xml
<CustomField>
    <fullName>wisespt__WisePredictEmailTemplatesOnly__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When WisePredictEmailTemplatesOnly is checked, the Wise Response Sidebar only displays Email Template recommendations.

When WisePredictEmailTemplatesOnly is left unchecked, the Wise Response Sidebar also displays Macro recommendations, when one or more relevant Macros are identified.</description>
    <label>WisePredictEmailTemplatesOnly</label>
    <type>Checkbox</type>
</CustomField>