metadata-sfdx/force-app/main/default/objects/wisespt__WiseSettings__c/fields/wisespt__WiseSearchEmailTemplates__c.field-meta.xml
<CustomField>
    <fullName>wisespt__WiseSearchEmailTemplates__c</fullName>
    <defaultValue>true</defaultValue>
    <label>WiseSearchEmailTemplates</label>
    <type>Checkbox</type>
</CustomField>