metadata-sfdx/force-app/main/default/objects/wisespt__WiseSettings__c/fields/wisespt__WiseSearchMacros__c.field-meta.xml
<CustomField>
    <fullName>wisespt__WiseSearchMacros__c</fullName>
    <defaultValue>true</defaultValue>
    <label>WiseSearchMacros</label>
    <type>Checkbox</type>
</CustomField>